--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,10 +1,20 @@
 .App {
-  padding: 20px;
+  padding: 15px 20px;
   text-align: center;
 }
 .weather-card {
-  height: 20rem;
-  background-position: center;
-  background-size: contain;
+  height: 15rem;
+  margin: 10px;
+  background-position: top;
+  background-size: 60%;
   background-repeat: no-repeat;
+  .card-text {
+    margin-top: 10%;
+  }
+  .card-title {
+    font-size: 2em;
+  }
+  .card-body {
+    padding: 5px;
+  }
 }
