--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,10 @@
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
-@import 'variables';
+@import '../App/App.scss';
+@import '_variables';
+@import url('https://fonts.googleapis.com/css2?family=Coda+Caption:wght@800&display=swap');
 
 body {
-  background-color: $favColor;
+  color: $fontColor;
+  background: $background;
+  font-family: 'Coda Caption', sans-serif;
 }
